# servant-filtersort

./: .gitignore  README.md  servant-filtersort.cabal
example/: Main.hs
src/Servant/API/FilterSort/: Indices.hs
src/Servant/API/FilterSort/Indices/: IxSet.hs
src/Servant/API/FilterSort/Request/: Filter.hs  Sort.hs
src/Servant/API/FilterSort/Response/Filter/: IxSet.hs
src/Servant/API/FilterSort/Response/Sort/: IxSet.hs
