name:                servant-filtersort
version:             1.0.0
synopsis:            Type-Safe Sort and Filter for Servant apps.
description:         Please see README.md
homepage:            https://github.com/adinapoli/servant-filtersort
author:              Alfredo Di Napoli and the IOHK Engineering Team
maintainer:          alfredo.dinapoli@gmail.com
copyright:           2019 Alfredo Di Napoli
license:             MIT
license-file:        LICENSE
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:
      Haskell2010
  default-extensions:
      OverloadedStrings
  ghc-options:
      -Wall
      -Werror
      -Wcompat
      -fwarn-redundant-constraints

  build-depends:
      base
    , ixset-typed
    , formatting
    , containers
    , http-types < 0.13
    , servant
    , servant-server
    , servant-client < 0.17
    , servant-client-core < 0.17
    , sop-core
    , generics-sop
    , text
    , wai < 3.3.0.0

  hs-source-dirs:
      src
  exposed-modules:
      Servant.API.FilterSort.Indices
      Servant.API.FilterSort.Indices.IxSet
      Servant.API.FilterSort.Request.Filter
      Servant.API.FilterSort.Response.Filter.IxSet
      Servant.API.FilterSort.Request.Sort
      Servant.API.FilterSort.Response.Sort.IxSet

executable servant-filtersort-example
  hs-source-dirs: example
  main-is: Main.hs
  build-depends:
    aeson,
    base,
    servant-filtersort -any,
    servant,
    servant-client,
    servant-server,
    ixset-typed,
    time,
    text,
    wai,
    warp
